2009-02-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (define): Fix under-allocation of space for 
	user-accessible variable name.

2009-01-31  James R. Van Zandt  <jrvz@comcast.net>

	* docs/gnuplot.doc: Update documentation: user functions can have
	up to 12 variables.

	* src/fit.c (fit_command): Allow second independent variable to be
	renamed in a fit command.

2009-01-30  James R. Van Zandt  <jrvz@comcast.net>

	* src/command.c (define): save a function definition in a
	user-accessible variable

2009-01-28  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* term/emf.trm (GP_TA_NOUPDATECP, GP_TA_UPDATECP, GP_TA_LEFT)
	(GP_TA_RIGHT, GP_TA_CENTER, GP_TA_TOP, GP_TA_BOTTOM)
	(GP_TA_BASELINE): Added a GP_ prefix to avoid collision between
	these and the actual Windows API macros of the same names.

2009-01-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/breaders.c (edf_filetype_function): Fix for long headers.

2009-01-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c (pm3d_plot): Fix for "set pm3d depthorder" ignoring
	"set pm3d interpolate".

2009-01-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_fillbox):
	Fix segfault due to freeing an uninitialized buffer pointer.

	* term/cairo.trm (cairotrm_filled_polygon):
	Plug memory leak: image buffers were never freed.

2009-01-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm (PS_make_header PS_image): Since the beginning of pm3d,
	the "/Color def" switched between gray and colour map. Choosing "false"
	for "Color", the gray map was always selected regardless the use of a
	custom palette. This led to ambiguities for custom colour palettes if
	they contain grays only. Thus let postscript choose always colour
	palette for interpolated colours ('set palette defined', 'set palette
	file') and colour/gray according to "Color" otherwise ('set palette
	gray', 'set palette rgb').